@@ -84,6 +84,10 @@ function(dir, outDir)
             .expand_package_description_db_R_fields(db),
             Built = Built)
 
+    ## This cannot be done in a MBCS: write.dcf fails
+    ctype <- Sys.getlocale("LC_CTYPE")
+    Sys.setlocale("LC_CTYPE", "C")
+    on.exit(Sys.setlocale("LC_CTYPE", ctype))
     .write_description(db, file.path(outDir, "DESCRIPTION"))
 
     outMetaDir <- file.path(outDir, "Meta")
